tests/FSharp.Analyzers.Tests/data/virtualcall/negative/SeqIsEmptyOnArray.fs
module M

let f () =
    let myArray = [| 1..10 |]
    Seq.isEmpty myArray // should warn
